<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="24dp"
    android:gravity="top|center_horizontal"
    android:background="@color/grey"
    android:fitsSystemWindows="true">

    <!-- Header -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_message"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/chessbackground"
        android:scaleType="fitCenter"
        android:contentDescription="@string/chess_background_desc" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Username -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_username"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#8B0000"
            android:autofillHints="username" />

        <!-- Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#8B0000"
            android:autofillHints="password" />

        <!-- Confirm Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password_again"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#8B0000"
            android:autofillHints="password" />

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#8B0000"
            android:autofillHints="emailAddress" />
    </LinearLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:textColor="@color/black"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:textColor="@color/black"
        android:text="@string/return_to_start" />
</LinearLayout>
