<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/grey"
    android:gravity="center"
    android:weightSum="10">  <!-- Evenly distribute elements -->

    <!-- Title Text -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/game"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"/>

    <!-- Chess Background Image -->
    <ImageView
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/chessbackground"
        android:contentDescription="@string/chess_background_desc"
        android:layout_gravity="center"
        android:scaleType="fitCenter"/>

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>